# cpp_learning

./: .clang-format  .gitmodules
codewar_notes/c/: RockPaperScissors.md
coding/asio/: CMakeLists.txt  asio_http.cc
coding/codewar_notes/c/: EvenorOdd.md
coding/codewar_notes/cpp/: 240401.md  rotate_array.md
coding/design_patterns/: CMakeLists.txt
coding/design_patterns/notes/: 1.md
coding/design_patterns/src/: main.cpp
coding/design_patterns/src/behavioral/: CMakeLists.txt  demo.cpp
coding/design_patterns/src/creational/: CMakeLists.txt  creational_placeholder.cpp
coding/design_patterns/src/structural/: CMakeLists.txt  simple_factory.cc  simple_factory_refactor.cc
coding/epoll_send_file/: Makefile  client.c
coding/examples/epoll_send_file/: server.c
coding/leetcode/algo_100/: CMakeLists.txt  armstrong_number.cc  confusing_number.cc  largest_unique_number.cc
concurrency/: get_id.cc  sleep_utils.cc
concurrency/future/: aysnc.cc  future.cc  promise.cc  shared_future.cc  task.cc
concurrency/memory_order/: mem_order_demo.cc  msg_pass.cc
concurrency/mpmc_ringbuffer/: mpmc_ringbuffer.h  test.cc
concurrency/multithreads/: multithread_atexit_advanced.c
concurrency/yield/: no_yield_demo.cc  yield.cc  yield_demo.cc
ds/dynamic_arr/: main.c
ds/hashtable/: hash_table.c  hash_table.h
ipc/msg_queue/: Makefile  msg_queue.md
ipc/msg_queue/posix/: Makefile  common.h  consumer.c  producer.c
ipc/msg_queue/systemv/: Makefile  consumer.c  consumer_multi.c  msg_common.h  msg_queue.md  producer.c  producer_multi.c
ipc/msg_queue/systemv/demo/: Makefile  consumer.c  msg_common.h  producer.c
ipc/semaphores/: prod_cons_app.c  sem.md  thread_prod_cons.c  thread_prod_cons_mac.c
ipc/shm/: Makefile  shm_comm.h  shm_r.c  shm_w.c
ipc/shm_struct_data/: writer.c
leetcode/: unordered_map.cc
leetcode/algo_100/: README.md  build.sh  find_all_k_distant_indices.cc
misc/: clang-format.md
misc/flex/fb1/: Makefile  fb1-1.l  fb1-2.l  fb1-3.l  fb1-4.l  fb1-5  fb1-5.l  fb1-5.tab.c  fb1-5.y  lex.yy.c
misc/flex/fb2/: 2-1.l  2-2.l  a.out  lex.yy.c
multithreads/: multithread_atexit.c
network/: getifs.c  tcp_socket.c
network/epoll_send_file/: README.md  server_fixed.c
stl/: stl_001.cc  stl_containers.cc  stl_deque.cc  stl_map.cc  stl_queue.cc  stl_set.cc  stl_string.cc  stl_utility.cc
sys_utils/: timer_impl.c
template/: function_template.cc
